# calendar-manager

./: Cargo.toml  README.md  io.gitlab.TitouanReal.CalendarManager.json  meson.build
data/: io.gitlab.TitouanReal.CalendarManager.desktop.in  io.gitlab.TitouanReal.CalendarManager.gschema.xml  io.gitlab.TitouanReal.CalendarManager.metainfo.xml.in  io.gitlab.TitouanReal.CalendarManager.service.in  meson.build  resources.gresource.xml
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: window.blp
data/resources/ui/calendar_manager_dialog/: calendar_creation_dialog.blp  calendar_details_page.blp  calendar_manager_dialog.blp  calendar_row.blp  collection_row.blp  collections_list.blp
data/resources/ui/create_event_dialog/: calendar_combo_row_header.blp  calendar_combo_row_item.blp  create_event_dialog.blp
data/resources/ui/create_event_dialog/calendar_combo_row/: calendar_combo_row.blp  calendar_combo_row_item.blp  calendar_combo_row_list_item.blp
data/resources/ui/search_dialog/: event_row.blp  search_dialog.blp
data/resources/ui/views/month_view/: month_view.blp  month_view_week_row.blp
data/resources/ui/views/narrow/narrow_month_view/: narrow_month_view.blp
data/resources/ui/views/narrow/narrow_year_view/: narrow_year_view.blp  narrow_year_view_month_cell.blp  narrow_year_view_year_row.blp
data/resources/ui/views/year_view/: year_view.blp  year_view_month_cell.blp  year_view_year_row.blp
po/: POTFILES.in  meson.build
src/: application.rs  calendar-manager.gresource.xml  config.rs  main.rs  meson.build  style.css  window.blp  window.rs
src/core/: calendar.rs  collection.rs  event.rs  manager.rs  mod.rs  provider.rs  resource.rs
src/core/pre_resource/: mod.rs  pre_calendar.rs
src/tsparql_utils/: notifier.rs
src/utils/: mod.rs
src/widgets/: calendar_row.blp  calendar_row.rs  collection_row.blp  collection_row.rs  collections_list.rs  mod.rs  window.blp  window.rs
src/widgets/calendar_manager_dialog/: calendar_creation_dialog.rs  calendar_details_page.rs  calendar_row.blp  calendar_row.rs  collection_row.blp  collection_row.rs  collections_list.blp  collections_list.rs  mod.rs
src/widgets/create_event_dialog/: calendar_combo_row_header.rs  calendar_combo_row_item.rs  mod.rs
src/widgets/create_event_dialog/calendar_combo_row/: calendar_combo_row_header.rs  calendar_combo_row_item.rs  calendar_combo_row_list_item.rs  mod.rs
src/widgets/search_dialog/: event_row.rs  mod.rs
src/widgets/views/: mod.rs
src/widgets/views/month_view/: mod.rs  month_view_day_cell.rs  month_view_week_row.rs
src/widgets/views/narrow/: mod.rs
src/widgets/views/narrow/narrow_month_view/: mod.rs
src/widgets/views/narrow/narrow_year_view/: mod.rs  narrow_year_view_month_cell.rs  narrow_year_view_year_row.rs
src/widgets/views/year_view/: mod.rs  year_view_month_cell.rs  year_view_year_row.rs
