[package]
name = "calendar-manager"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_7"] }
ccm = { git = "https://github.com/TitouanReal/ccm" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tsparql = { version = "0.6.1", package = "tracker-rs", features = ["v3_5"] }
